# ShiftingTime

./: README.md  usage_tutorial.ipynb
experiments/data_provider/: KNF_data_classes.py  data_factory.py  data_loader.py  small_context.py  uea.py
experiments/dataset/: ReadMe.md
experiments/dataset/Cryptos/: cryptos_data_gen.py
experiments/exp/: exp_basic.py  exp_long_term_forecasting.py  exp_long_term_forecasting_informer.py  exp_long_term_forecasting_knf.py  exp_short_term_forecasting.py
experiments/models/: KRNO.py
experiments/scripts/: plotting_config.py
experiments/scripts/benchmarking/: plots.ipynb  run.sh  train_script_fno_3d.py  train_script_krno_fno2d_v2.py
experiments/scripts/climate_modeling/: err_time_dict.pkl  metrics.py  post_process.py  train_script.py
experiments/scripts/darcy-flow/: post_process.py  run_all.sh  train_script.py
experiments/scripts/darts/: plot_dart_results.py  run_KRNO_hyper_param_tuning.py  run_darts_KRNO.sh  run_exp.py  run_exp_weight_decay.py
experiments/scripts/elasticity/: nohup1_layers3.out  post_process.py  results.ipynb  run_all.sh  train_fno.py  train_script_krno.py
experiments/utils/: KNF_normalizer.py  m4_summary.py  metrics.py  print_args.py  tools.py  utilities3.py
krno/: LICENSE  README.md  pyproject.toml
krno/khatriraonop/: integral_transforms.py  kronecker_algebra.py  models.py  product_kernels.py  quadrature.py  types.py
krno/tests/: test_integral_transform.py  test_kronecker_algebra.py  test_models.py  test_models_v1_v2.py  test_models_v2.py  test_product_kernels.py  test_quadrature.py
(+82 files in other folders)
