[tool.poetry]
name = "khatriraonop"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jaxtyping = "^0.2.28"
schedulefree = "^1.2.5"
pandas = "^1.5.3"  
torch = "2.1.1"  

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
wandb = "^0.16.6"
torch-harmonics = "^0.6.5"
tqdm = "^4.66.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
